--- a/index.html
+++ b/index.html
@@ -1,42 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Portfólio Endryw</title>
 </head>
+
 <body>
     <header>
-    <a href="#" class="logo">Endryw</a>
-
-    <nav>
-        <a href="#" class="nav-link">Home</a>
-        <a href="#">Projetos</a>
-        <a href="#">Habilidades</a>
-        <a href="#">Contato</a>
-        <a href="#">Formação</a>
-        <a href="#">Experiencias</a>
-    </nav>
+        <a href="#" class="logo">Portifólio</a>
+        <nav>
+            <a href="#" class="nav-link">Home</a>
+            <a href="#">Projetos</a>
+            <a href="#">Habilidades</a>
+            <a href="#">Contato</a>
+            <a href="#">Formação</a>
+            <a href="#">Experiências</a>
+        </nav>
     </header>
+
     <section class="home">
         <div class="home-img">
-            <img src="perfil.jpg" alt="">
+            <img src="Foto de Endryw.jpg" alt="Foto de perfil" />
         </div>
-        <div class="home-content">
-            <h1>Olá, me chamo <span>Endryw</span></h1>
-            <h3 class="typing-text">Sou um <span></span></h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat odit asperiores, nisi ad consequatur similique perspiciatis quam, totam rem aperiam iure sit facilis aliquam quisquam blanditiis ab! Reprehenderit, non maxime.</p>
-            <div class="social-icons">
-                <a href="" class="fa-brands fa-linkedin"></a>
-                <a href="" class="fa-brands fa-github"></a>
-                <a href="" class="fa-brands fa-instagram"></a>
-                <a href="" class="fa-brands fa-x-twitter"></a>
-            </div>
-            <a href="bnt">Me contrate</a>
-        </div>
-    </section>
 
+        <div class="home-content">
+            <h1>Olá, meu nome é <span>Endryw</span></h1>
+            <h3 class="typing-text">Sou um <span id="typed-text"></span></h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat odit
+                asperiores, nisi ad consequatur similique perspiciatis quam, totam rem
+                aperiam iure sit facilis aliquam quisquam blanditiis ab! Reprehenderit,
+                non maxime.
+            </p>
+
+            <div class="action-buttons">
+                <div class="social-icons">
+                    <a href="#" class="fa-brands fa-linkedin"></a>
+                    <a href="#" class="fa-brands fa-github"></a>
+                    <a href="#" class="fa-brands fa-instagram"></a>
+                    <a href="#" class="fa-brands fa-x-twitter"></a>
+                </div>
+                <a href="#" class="bnt">Me contrate</a>
+            </div>
+
+
+
+            <script>
+                const texts = ["Web Developer", "UI/UX Designer", "Freelancer", "Content Writer", "Tech Enthusiast"];
+                let count = 0;
+                let index = 0;
+                let currentText = "";
+                let letter = "";
+                const typedText = document.getElementById("typed-text");
+
+                function type() {
+                    if (count === texts.length) {
+                        count = 0;
+                    }
+                    currentText = texts[count];
+                    letter = currentText.slice(0, ++index);
+
+                    typedText.textContent = letter;
+                    if (letter.length === currentText.length) {
+                        setTimeout(() => {
+                            index = 0;
+                            count++;
+                            setTimeout(type, 500);
+                        }, 1500);
+                    } else {
+                        setTimeout(type, 100);
+                    }
+                }
+                type();
+            </script>
 </body>
+
 </html>
