--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <a href="#" class="logo">Portifólio</a>
+        <a href="#" class="logo">Endryw</a>
         <nav>
             <a href="#" class="nav-link">Home</a>
             <a href="#">Projetos</a>
@@ -24,11 +24,11 @@
 
     <section class="home">
         <div class="home-img">
-            <img src="Foto de Endryw.jpg" alt="Foto de perfil" />
+            <img src="1747329527482.jpg" alt="Foto de perfil" />
         </div>
 
         <div class="home-content">
-            <h1>Olá, meu nome é <span>Endryw</span></h1>
+            <h1>Olá, me chamo <span>Endryw</span></h1>
             <h3 class="typing-text">Sou um <span id="typed-text"></span></h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat odit
@@ -49,8 +49,18 @@
 
 
 
+
+
+
+
+
+            <section class="about" id="">
+
+            </section>
+
+
             <script>
-                const texts = ["Web Developer", "UI/UX Designer", "Freelancer", "Content Writer", "Tech Enthusiast"];
+                const texts = ["Desenvolvedor Web", "Designer"];
                 let count = 0;
                 let index = 0;
                 let currentText = "";
